prevent dates from wrapping

--- a/public/defaults.css
+++ b/public/defaults.css
@@ -160,6 +160,7 @@ a.center {
 .post-list-item time {
   text-align: right;
   color: gray;
+  white-space: nowrap;
 }
 
 .post-list-item span {
